--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
+    "gulp-jsdoc3": "^0.2.1",
     "gulp-jshint": "^2.0.0",
     "gulp-uglify": "^1.5.3",
     "jshint": "^2.9.1",
