--- a/.jshintrc
+++ b/.jshintrc
@@ -45,7 +45,7 @@
     "esversion"     : 5,         // {int} Specify the ECMAScript version to which the code must adhere.
     "moz"           : false,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
                                  // (ex: `for each`, multiple try/catch, function expression…)
-    "evil"          : false,     // true: Tolerate use of `eval` and `new Function()`
+    "evil"          : true,     // true: Tolerate use of `eval` and `new Function()`
     "expr"          : false,     // true: Tolerate `ExpressionStatement` as Programs
     "funcscope"     : false,     // true: Tolerate defining variables inside control statements
     "globalstrict"  : false,     // true: Allow global "use strict" (also enables 'strict')
@@ -94,10 +94,12 @@
 		"content" : true , 
 		"language" : true , 
 		"MediaManager" : true ,
+		"MediaUtils" : true ,
 		"dbStatement" : true , 
 		"section" : true , 
 		"publishCache" : true ,
 		"isPreview" : true,
-		"MessageDigest" : true 
+		"MessageDigest" : true,
+		"PathBuilder" : true 
 	}        
 }
