--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/FPBSchoolOfNursing/T4Utils#readme",
   "devDependencies": {
+    "bottlejs": "^1.2.3",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
