--- a/.jshintrc
+++ b/.jshintrc
@@ -91,6 +91,7 @@
         "T4Utils" : true ,
         "importPackage" : true ,
         "com" : true ,
+		"org" : true
         "content" : true ,
         "language" : true ,
         "MediaManager" : true ,
